{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 501,
  "lineage": "73f9dfc6-4faf-4a94-769d-421c89785ab8",
  "resources": [
    {
      "module": "module.endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794534486025:vpc-endpoint/vpce-00bc80c2d2b58df2c",
            "cidr_blocks": [
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21"
            ],
            "id": "vpce-00bc80c2d2b58df2c",
            "owner_id": "794534486025",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0a9c3558f3edaedb5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a92faa286c353d8f",
            "domain": "vpc",
            "id": "eipalloc-0a92faa286c353d8f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-232-252-21.compute-1.amazonaws.com",
            "public_ip": "3.232.252.21",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a92faa286c353d8f",
            "association_id": "eipassoc-0df917baa29f26c36",
            "connectivity_type": "public",
            "id": "nat-00749a12946461649",
            "network_interface_id": "eni-05c0624f03efd8db1",
            "private_ip": "10.0.46.70",
            "public_ip": "3.232.252.21",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0839181ce42d1d5e8",
            "tags": {
              "Name": "my_nat_gateway"
            },
            "tags_all": {
              "Name": "my_nat_gateway"
            }
          },
          "dependencies": [
            "module.subnets.aws_eip.nat_eip",
            "module.subnets.aws_subnet.main_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b58d8733db93de3b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00749a12946461649",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b58d8733db93de3b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.nat_eip",
            "module.subnets.aws_nat_gateway.nat_gateway",
            "module.subnets.aws_route_table.private_route_table",
            "module.subnets.aws_subnet.main_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794534486025:route-table/rtb-0b58d8733db93de3b",
            "id": "rtb-0b58d8733db93de3b",
            "owner_id": "794534486025",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_route_table_1"
            },
            "tags_all": {
              "Name": "private_route_table_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9c3558f3edaedb5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794534486025:route-table/rtb-014147442a2b75c03",
            "id": "rtb-014147442a2b75c03",
            "owner_id": "794534486025",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_route_table_2"
            },
            "tags_all": {
              "Name": "private_route_table_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9c3558f3edaedb5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794534486025:route-table/rtb-0472dcd8223e48d35",
            "id": "rtb-0472dcd8223e48d35",
            "owner_id": "794534486025",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00730dfee8a6c8af8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9c3558f3edaedb5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a38987cbe16cf529",
            "route_table_id": "rtb-0b58d8733db93de3b",
            "subnet_id": "subnet-0d2509e20be9348b8"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private_route_table",
            "module.subnets.aws_subnet.main_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b03d06184ddca071",
            "route_table_id": "rtb-014147442a2b75c03",
            "subnet_id": "subnet-02c6fe42eb6d60f70"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private_route_table",
            "module.subnets.aws_subnet.main_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1389ee43552daad",
            "route_table_id": "rtb-0472dcd8223e48d35",
            "subnet_id": "subnet-0839181ce42d1d5e8"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public_route_table",
            "module.subnets.aws_subnet.main_subnet",
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005e8e6d96353fbdd",
            "route_table_id": "rtb-0472dcd8223e48d35",
            "subnet_id": "subnet-0c7dbd940ff850b4d"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public_route_table",
            "module.subnets.aws_subnet.main_subnet",
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794534486025:subnet/subnet-0839181ce42d1d5e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0839181ce42d1d5e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "794534486025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1"
            },
            "tags_all": {
              "Name": "public_subnet_1"
            },
            "vpc_id": "vpc-0a9c3558f3edaedb5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794534486025:subnet/subnet-0c7dbd940ff850b4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7dbd940ff850b4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "794534486025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_2"
            },
            "tags_all": {
              "Name": "public_subnet_2"
            },
            "vpc_id": "vpc-0a9c3558f3edaedb5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794534486025:subnet/subnet-0d2509e20be9348b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2509e20be9348b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "794534486025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1"
            },
            "tags_all": {
              "Name": "private_subnet_1"
            },
            "vpc_id": "vpc-0a9c3558f3edaedb5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794534486025:subnet/subnet-02c6fe42eb6d60f70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c6fe42eb6d60f70",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "794534486025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_2"
            },
            "tags_all": {
              "Name": "private_subnet_2"
            },
            "vpc_id": "vpc-0a9c3558f3edaedb5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794534486025:internet-gateway/igw-00730dfee8a6c8af8",
            "id": "igw-00730dfee8a6c8af8",
            "owner_id": "794534486025",
            "tags": {
              "Name": "my_igw"
            },
            "tags_all": {
              "Name": "my_igw"
            },
            "vpc_id": "vpc-0a9c3558f3edaedb5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794534486025:vpc/vpc-0a9c3558f3edaedb5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b6429d9ee6a32463",
            "default_route_table_id": "rtb-078bbea10f8142e6f",
            "default_security_group_id": "sg-0d49836418d043193",
            "dhcp_options_id": "dopt-0bdbe67ef178affd6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a9c3558f3edaedb5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-078bbea10f8142e6f",
            "owner_id": "794534486025",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}